[package]
name = "HuangProject2"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
blake3 = "1.7.0"
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
rand = "0.8.5"
hex = "0.4.3"
criterion = "0.5.1"

[[bench]]
name = "performance"
harness = false