[package]
name = "HuangProject2"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
blake3 = "1.7.0"
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
rand = "0.8.5"
hex = "0.4.3"
criterion = "0.5.1"
rayon = "1.10.0"
rsntp = "4.0.0"
env_logger = "0.11.7"
log = "0.4.27"
chrono = "0.4.40"

[[bin]]
name = "HuangProject2"
path = "src/main.rs"
harness = false

[[bench]]
name = "performance"
path = "benches/performance.rs"
harness = false

[profile.release]
debug = true